@@ -5,8 +5,10 @@ import java.util.List;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.renderer.texture.TextureManager;
 import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.StatCollector;
 import mariculture.core.Mariculture;
 import mariculture.core.gui.GuiMariculture;
+import mariculture.core.gui.feature.FeatureNotifications.NotificationType;
 
 public class Feature {
 	protected static ResourceLocation texture = new ResourceLocation(Mariculture.modid, "textures/gui/gui_elements.png");
@@ -16,11 +18,22 @@ public class Feature {
 		tm = Minecraft.getMinecraft().renderEngine;
 	}
 
-	public void draw(GuiMariculture gui, int x, int y) {
+	public void draw(GuiMariculture gui, int x, int y, int mouseX, int mouseY) {
 		tm.bindTexture(texture);
 	}
 	
 	public void addTooltip(List tooltip, int mouseX, int mouseY) {
 		return;
+	}
+
+	public void mouseClicked(int mouseX, int mouseY) {
+		return;
+	}
+	
+	public void addLine(String start, int i, String note, List tooltip) {
+		String line = start + "." + note.toLowerCase().replaceAll("_", "\\.") + ".text" + (i + 1);
+		if(!line.equals(StatCollector.translateToLocal(line))) {
+			tooltip.add(StatCollector.translateToLocal(line));
+		}
 	}
 }
