@@ -37,7 +37,7 @@ public class FeatureTank extends Feature {
 	}
 	
 	@Override
-	public void draw(GuiMariculture gui, int x, int y) {
+	public void draw(GuiMariculture gui, int x, int y, int mouseX, int mouseY) {
 		int height = tank.getTankScaled(58);
 		FluidStack liquid = tank.getFluid();
 		if (liquid == null) {
