@@ -8,10 +8,12 @@ import net.minecraft.entity.player.EntityPlayer;
 
 public class Snorkel {
 	public static void init(EntityPlayer player) {
-		if (PlayerHelper.hasArmor(player, ArmorSlot.HAT, Diving.snorkel)) {
-			if (player.isInsideOfMaterial(Material.water)) {
-				if (player.worldObj.getWorldTime() % 2 == 0)
-					player.setAir(player.getAir() + 1);
+		if(!player.capabilities.isCreativeMode) {
+			if (PlayerHelper.hasArmor(player, ArmorSlot.HAT, Diving.snorkel)) {
+				if (player.isInsideOfMaterial(Material.water)) {
+					if (player.worldObj.getWorldTime() % 2 == 0)
+						player.setAir(player.getAir() + 1);
+				}
 			}
 		}
 	}
