@@ -30,6 +30,10 @@
 * Fixed fishing rods using bait when pulling in and crash when the player is null
 * Fixed Speed Boat dropping twice when broken with a TiC pick
 
+====Config Changes====
+* Removed Unused Block Ids for Molten Metals and Limestone Stairs
+* Rennamed Autofisher Speed Entry (To force use of new SLOWER speed (since they now accept upgrades))
+
 == Mariculture 1.1.4c for Minecraft v1.6.X==
 * Hopefully fixed the last of the TE Fluiduct Crashes (Quick fix so may have issues in some cases: Proper fix will come with 1.2)
 * Pressure Vessel Base Storage increased to be the same as two BC tanks, aka 32 buckets
